# TestBoostSerialization

./: BaseClassForInheritance.hpp  CMakeLists.txt  ClassForSerialization.hpp  CustomDataType.hpp  SerializationHelper.hpp  main.cpp  stl_print.hpp
