cmake_minimum_required(VERSION 3.5)
PROJECT(TestSerialization)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")

FIND_PACKAGE(Boost 1.68.0 REQUIRED COMPONENTS serialization)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(USED_LIBS ${Boost_SERIALIZATION_LIBRARY})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_EXECUTABLE(TestSerialization main.cpp)

TARGET_LINK_LIBRARIES(TestSerialization ${USED_LIBS})
